# rdl

./: .gitignore  Cargo.toml  README.md  use.dev.md  use.md
.github/workflows/: main.yml
src/: cli.rs  commands.rs  daemon.rs  downloader.rs  hashing.rs  main.rs  state.rs  utils.rs
src/providers/: mod.rs  modelscope.rs
