[package]
name = "rdl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
governor = "0.6"
anyhow = "1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
url = "2.5"
uuid = { version = "1.7", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
daemonize = "0.5"
nix = { version = "0.27", features = ["signal"] }
glob = "0.3"
num_cpus = "1.16"